02-gateway-api/03-gateway-config/___04-tcp-route.yaml
---

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-app
  namespace: default

spec:
  parentRefs:
    - name: my-gateway

  rules:
    - backendRefs:
        - name: whoamitcp
          port: 9000
          weight: 1

---

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tls-app
  namespace: default

spec:
  parentRefs:
    - name: my-gateway
      sectionName: tls

  rules:
    - backendRefs:
        - name: whoamitcp
          port: 9000
          weight: 1
